--- a/index.html
+++ b/index.html
@@ -234,13 +234,14 @@
   </div>
 
   <div class="col-12 ">
-  <span class="zocial-dribbble"></span>
-    <ul>
-      <li class="zocial-twitter"></li>
-      <li class="zocial-flickr"></li>
-      <li class="zocial-lastfm"></li>
-      <li class="zocial-reddit"></li>
-    </ul>
+  
+   
+      <span class="zocial-twitter"></span>
+      <span class="zocial-flickr"></span>
+      <span class="zocial-lastfm"></span>
+      <span class="zocial-reddit"></span>
+   
+
   </div>
   
 </div>
