--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
   <div class="col-12 ">
   
    
-      <span class="zocial-twitter"></span>
-      <span class="zocial-flickr"></span>
-      <span class="zocial-lastfm"></span>
-      <span class="zocial-reddit"></span>
+      <span class="zocial-facebook"></span>
+      <span class="zocial-fivehundredpx"></span>
+      <span class="zocial-weibo"></span>
+      <span class="zocial-linkedin"></span>
    
 
   </div>
