--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
 
 <div class="footer row">
 
-  <div class="col-12 ">
+  <div class="col-12" id="copyright-box">
     <p id="copyright">Copyright © Developed by Yao WEI</p>
   </div>
 
-  <div class="col-12 ">
+  <div class="col-12" id="social-icon">
   
    
       <span class="zocial-facebook"></span>
