--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
     <p id="copyright">Copyright © Developed by Yao WEI</p>
   </div>
 
-  <div class="col-12" id="social-icon">
-
+  <div class="col-12" id="social-icon-box">
+    <div id="span-box">
       <span class="zocial-facebook"></span>
       <span class="zocial-instagram"></span>
       <span class="zocial-linkedin"></span>
       <span class="zocial-weibo"></span>
-
+    </div>
   </div>
   
 </div>
