--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
     <link rel="stylesheet" href="css/weloveiconfonts.css">
+    <link rel="stylesheet" href="css/socicon.css">
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -235,10 +236,22 @@
 
   <div class="col-12" id="social-icon-box">
     <div id="span-box">
-      <span class="zocial-facebook"></span>
+      <!-- <span class="zocial-facebook"></span>
       <span class="zocial-instagram"></span>
       <span class="zocial-linkedin"></span>
-      <span class="zocial-weibo"></span>
+      <span class="zocial-weibo"></span> -->
+
+
+      <ul class="soc">
+        <li><a class="soc-twitter" href="#"></a></li>
+        <li><a class="soc-facebook" href="#"></a></li>
+        <li><a class="soc-google" href="#"></a></li>
+        <li><a class="soc-pinterest" href="#"></a></li>
+        <li><a class="soc-linkedin soc-icon-last" href="#"></a></li>
+      </ul>
+
+
+
     </div>
   </div>
   
