--- a/index.html
+++ b/index.html
@@ -243,11 +243,13 @@
 
 
       <ul class="soc">
-        <li><a class="soc-twitter" href="#"></a></li>
+        
         <li><a class="soc-facebook" href="#"></a></li>
-        <li><a class="soc-google" href="#"></a></li>
         <li><a class="soc-pinterest" href="#"></a></li>
-        <li><a class="soc-linkedin soc-icon-last" href="#"></a></li>
+        <li><a class="soc-linkedin" href="#"></a></li>
+        <li><a class="soc-google" href="#"></a></li>
+        <li><a class="soc-twitter  soc-icon-last" href="#"></a></li>
+
       </ul>
 
 
