--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
     <h4 class="col-12" id="contact-title">Get in touch</h4>
   </div>
  
-  <div id="contact-container">
-    <div id="contact-form">
+  <div id="contact-container" class="row">
+    <div id="contact-form" class="col-12">
       <label>Name:</label>
         <input id="sender">
         <br>
