--- a/index.html
+++ b/index.html
@@ -212,31 +212,15 @@
  
   <div id="contact-container" class="row">
     <div id="contact-form" class="col-12">
-      <label>Name:</label>
-        <input id="sender">
-        <br>
-
-        <label>Email address:</label>
-        <input id="senderEmail">
-        <br>
-
-        <label>Subject:</label>
-        <input id="subject">
-        <br>
-
-        <label>Message:</label>
-        <textarea rows="5" cols="20" id="message" ></textarea>
-        <br>
-
+        <input id="sender" placeholder="Name">
+        <input id="senderEmail" placeholder="E-mail">  
+        <input id="subject" placeholder="Subject"> 
+        <textarea rows="5" cols="20" id="message" placeholder="Message"></textarea>
         <button onclick="gotosendemail()">Send</button>
-
         <div id="email-result" style="border: 1px solid red; height: 50px">
-          
         </div>
 
     </div>
-
-
 
     <div class="col-12" id="contact-info">
       <span class="contact-content"><b>Email: </b>yaohermione@gmail.com</span><span class="contact-content"><b>Mobile Phone: </b>+852-6056 9332</span>
