--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
  
   <div id="contact-container" class="row">
     <div id="contact-form" class="col-12">
-        <input id="sender" placeholder="Name">
-        <input id="senderEmail" placeholder="E-mail">  
-        <input id="subject" placeholder="Subject"> 
-        <textarea rows="5" cols="20" id="message" placeholder="Message"></textarea>
-        <button onclick="gotosendemail()">Send</button>
+        <input id="sender" placeholder="Name" class="form-element">
+        <input id="senderEmail" placeholder="E-mail" class="form-element">  
+        <input id="subject" placeholder="Subject" class="form-element"> 
+        <textarea rows="5" cols="20" id="message" placeholder="Message" class="form-element"></textarea>
+        <button onclick="gotosendemail()" class="form-element">Send</button>
         <div id="email-result" style="border: 1px solid red; height: 50px">
         </div>
 
