--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <input id="subject" placeholder="Subject" class="form-element col-12"> 
         <textarea rows="5" cols="20" id="message" placeholder="Message" class="form-element col-12"></textarea>
         <button onclick="gotosendemail()" class="form-element">Send</button>
-        <div id="email-result" style="border: 1px solid red; height: 50px">
+        <div id="email-result">
         </div>
 
     </div>
