--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
  
   <div id="contact-container" class="row">
     <div id="contact-form" class="col-12">
-        <input id="sender" placeholder="Name" class="form-element col-12">
-        <input id="senderEmail" placeholder="E-mail" class="form-element col-12">  
-        <input id="subject" placeholder="Subject" class="form-element col-12"> 
+        <input type="text" id="sender" placeholder="Name" class="form-element col-12">
+        <input type="text" id="senderEmail" placeholder="E-mail" class="form-element col-12">  
+        <input type="text" id="subject" placeholder="Subject" class="form-element col-12"> 
         <textarea rows="5" cols="20" id="message" placeholder="Message" class="form-element col-12"></textarea>
         <button onclick="gotosendemail()" class="form-element">Send</button>
         <div id="email-result">
