--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
         <input type="text" id="sender" placeholder="Name" class="form-element col-12">
         <input type="text" id="senderEmail" placeholder="E-mail" class="form-element col-12">  
         <input type="text" id="subject" placeholder="Subject" class="form-element col-12"> 
-        <textarea rows="5" cols="20" id="message" placeholder="Message" class="form-element col-12"></textarea>
-        <button onclick="gotosendemail()" class="form-element">Send</button>
+        <textarea id="message" placeholder="Message" class="form-element col-12"></textarea>
+        <button onclick="gotosendemail()" class="form-element col-3" id="send-btn">Send</button>
+        
         <div id="email-result">
         </div>
 
