--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <input type="text" id="senderEmail" placeholder="E-mail" class="form-element col-12">  
         <input type="text" id="subject" placeholder="Subject" class="form-element col-12"> 
         <textarea id="message" placeholder="Message" class="form-element col-12"></textarea>
-        <button onclick="gotosendemail()" class="form-element col-3" id="send-btn">Send</button>
+        <button onclick="gotosendemail()" class="form-element col-3" id="send-btn"><div>Send<div></button>
         
         <div id="email-result">
         </div>
