--- a/index.html
+++ b/index.html
@@ -218,9 +218,11 @@
         <textarea id="message" placeholder="Message" class="form-element col-12"></textarea>
         <button onclick="gotosendemail()" class="form-element col-3" id="send-btn"><div>Send</div></button>
         
-        <div id="email-result">
-        </div>
+        <div id="email-result-container">
+          <div id="email-result">
 
+          </div>
+        </div>
     </div>
 
     <div class="col-12" id="contact-info">
