--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <textarea id="message" placeholder="Message" class="form-element col-12"></textarea>
         <button onclick="gotosendemail()" class="form-element col-3" id="send-btn"><div>Send</div></button>
         
-        <div id="email-result-container" class=".hide-result">
+        <div id="email-result-container" class="hide-result">
           <div id="email-result">
 
           </div>
