--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
   <div id="contact-container" class="row">
     <div id="contact-form" class="col-12">
         <input type="text" id="sender" placeholder="Name" class="form-element col-12">
-        <input type="text" id="senderEmail" placeholder="E-mail" class="form-element col-12">  
+        <input type="text" id="senderEmail" placeholder="E-mail *" class="form-element col-12">  
         <input type="text" id="subject" placeholder="Subject" class="form-element col-12"> 
-        <textarea id="message" placeholder="Message" class="form-element col-12"></textarea>
+        <textarea id="message" placeholder="Message *" class="form-element col-12"></textarea>
         <button onclick="gotosendemail()" class="form-element col-3" id="send-btn"><div>Send</div></button>
         
         <div id="email-result-container" class="result-flex hide-result">
