--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
-    <li><div>Me</div></li>
+    <li><div><a href="#me">Me</a></div></li>
 
   </ul>
 </nav>
@@ -254,11 +254,11 @@
 
       <ul class="soc">
         
-        <li><a class="soc-facebook" href="https://www.facebook.com/yaohermione"></a></li>
-        <li><a class="soc-pinterest" href="https://www.pinterest.com/yaohermione/"></a></li>
-        <li><a class="soc-linkedin" href="https://www.linkedin.com/in/yao-wei-939a044b?trk=nav_responsive_tab_profile_pic"></a></li>
-        <li><a class="soc-google" href="https://plus.google.com/115912904688638383478"></a></li>
-        <li><a class="soc-twitter  soc-icon-last" href="https://twitter.com/Hermion28758241"></a></li>
+        <li><a target="_blank" class="soc-facebook" href="https://www.facebook.com/yaohermione"></a></li>
+        <li><a target="_blank" class="soc-pinterest" href="https://www.pinterest.com/yaohermione/"></a></li>
+        <li><a target="_blank" class="soc-linkedin" href="https://www.linkedin.com/in/yao-wei-939a044b?trk=nav_responsive_tab_profile_pic"></a></li>
+        <li><a target="_blank" class="soc-google" href="https://plus.google.com/115912904688638383478"></a></li>
+        <li><a target="_blank" class="soc-twitter  soc-icon-last" href="https://twitter.com/Hermion28758241"></a></li>
 
       </ul>
 
