--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <li class="horizontal"><div>Portrait</div></li>
     <li class="horizontal"><div>Travel</div></li>
     <li class="horizontal"><div>Life</div></li>
-    <li class="horizontal"><div>Me</div></li>
+    <li class="horizontal"><div><a href="#me">Me</a></div></li>
   </ul>
 </div>
 
