--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <nav id="drawer">
   <ul>
-    <li><div>Pre-wedding</div></li>
+    <li><div><a href="pre-wedding.html">Pre-wedding</a></div></li>
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
