--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal"><div>Pre-wedding</div></li>
+    <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><div>Portrait</div></li>
     <li class="horizontal"><div>Travel</div></li>
     <li class="horizontal"><div>Life</div></li>
