--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
-    <li><div><a href="#me">Me</a></div></li>
+    <li><div><a href="index.html/#me">Me</a></div></li>
 
   </ul>
 </nav>
@@ -66,7 +66,7 @@
     <li class="horizontal"><div>Portrait</div></li>
     <li class="horizontal"><div>Travel</div></li>
     <li class="horizontal"><div>Life</div></li>
-    <li class="horizontal"><div><a href="#me">Me</a></div></li>
+    <li class="horizontal"><div><a href="index.html/#me">Me</a></div></li>
   </ul>
 </div>
 
