--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/socicon.css">
     <link rel="stylesheet" href="css/ring.css">
 
-    <link rel="stylesheet" href="css/swipebox.min.css" />
+    <link rel="stylesheet" href="css/swipebox.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
     
 
@@ -96,7 +96,7 @@
             <img src="photos/grandma.jpg" />
         </a>
         <a href="photos/pathgrass.jpg">
-            <img src="photos/pathgrass.jpg" />
+            <img src="photos/grasspath.jpg" />
         </a>
         <a href="photos/oldman.jpg">
             <img src="photos/oldman.jpg" />
@@ -155,6 +155,7 @@
   <script src="js/plugins.js"></script>
   <script src="js/sly.min.js"></script>
   <script src="js/sendemailfunc.js"></script>
+  <script src="js/jquery.js"></script>
   <script src="js/jquery.swipebox.min.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
 
@@ -170,5 +171,5 @@
     </script>
 
 
- 
+
 </html>
