--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -65,11 +65,11 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal"><div>Pre-wedding</div></li>
+    <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><div>Portrait</div></li>
     <li class="horizontal"><div>Travel</div></li>
     <li class="horizontal"><div>Life</div></li>
-    <li class="horizontal"><div><a href="#me">Me</a></div></li>
+    <li class="horizontal"><div><a href="index.html/#me">Me</a></div></li>
   </ul>
 </div>
 
@@ -78,6 +78,12 @@
 </header>
 
 <div id="content">
+
+
+    <div id="banner" class="col-12 banner-not-mainpage">   
+    </div>
+
+<div id="below-banner">
   <div class="swipeboxEx">
       
         <a href="photos/bikeboys.jpg" >
@@ -133,6 +139,10 @@
 
     </div>
 
+
+
+
+</div>
 </div>
 
 <div id="main-gray-layer"><div>
