--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -10,11 +10,11 @@
   
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/css.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
-    <link rel="stylesheet" href="css/socicon.css">
-    <link rel="stylesheet" href="css/ring.css">
-
+    <link rel="stylesheet" href="css/socicon.css"> -->
+    <!-- <link rel="stylesheet" href="css/ring.css">
+ -->
     <link rel="stylesheet" href="css/swipebox.min.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
     
