--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/socicon.css"> -->
     <!-- <link rel="stylesheet" href="css/ring.css">
  -->
-    <link rel="stylesheet" href="css/swipebox.min.css" />
+    <link rel="stylesheet" href="css/swipebox.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
     
 <!-- 
