--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="css/css.css">
     <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
-    <link rel="stylesheet" href="css/socicon.css"> -->
-    <!-- <link rel="stylesheet" href="css/ring.css">
+    <link rel="stylesheet" href="css/socicon.css">
+    <link rel="stylesheet" href="css/ring.css">
  -->
-    <link rel="stylesheet" href="css/swipebox.css" />
+    <link rel="stylesheet" href="css/swipebox.min.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
     
 <!-- 
