--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -20,8 +20,8 @@
     
 
 
-   <!--  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+   <!-- <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
  --> 
