--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -165,6 +165,7 @@
   <script src="js/sendemailfunc.js"></script> -->
   <script src="js/jquery.js"></script>
   <script src="js/js.js"></script>
+  <script src="js/jquery.js"></script>
   <script src="js/jquery.swipebox.min.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
 
