--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -101,7 +101,7 @@
         <a href="photos/grandma.jpg">
             <img src="photos/grandma.jpg" />
         </a>
-        <a href="photos/pathgrass.jpg">
+        <a href="photos/grasspath.jpg">
             <img src="photos/grasspath.jpg" />
         </a>
         <a href="photos/oldman.jpg">
@@ -164,11 +164,11 @@
   <script src="js/sly.min.js"></script>
   <script src="js/sendemailfunc.js"></script> -->
   
-  <script src="js/js.js"></script>
+  
   <script src="js/jquery.js"></script>
   <script src="js/jquery.swipebox.min.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
-
+  <script src="js/js.js"></script>
  
       <script>
     $('.swipeboxEx').each(function(i, el) {
