--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -168,7 +168,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/jquery.swipebox.min.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
-  <script src="js/js.js"></script>
+  <!-- <script src="js/js.js"></script> -->
  
       <script>
     $('.swipeboxEx').each(function(i, el) {
