--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -9,7 +9,7 @@
 
   
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/css.css">
+    <!-- <link rel="stylesheet" href="css/css.css"> -->
     <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
     <link rel="stylesheet" href="css/socicon.css">
@@ -166,7 +166,7 @@
   
   
   <script src="js/jquery.js"></script>
-  <script src="js/test.js"></script>
+  <!-- <script src="js/test.js"></script> -->
   <script src="js/jquery.swipebox.min.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
 
