--- a/Justified-Gallery-3.6.1/Justified-Gallery-3.6.1/test/main/newwebsite.html
+++ b/Justified-Gallery-3.6.1/Justified-Gallery-3.6.1/test/main/newwebsite.html
@@ -9,13 +9,12 @@
     <!-- endbower -->
     <style type="text/css">
    
-    body{padding:50px; background-color: #eaeaea}
  
     </style>
 </head>
 
 <body>
-    <h1>Swipebox test</h1>
+   
     <div class="swipeboxEx">
       
         <a href="../photos/bikeboys.jpg" >
@@ -33,8 +32,8 @@
         <a href="../photos/grandma.jpg">
             <img src="../photos/grandma.jpg" />
         </a>
-        <a href="../photos/pathgrass.jpg">
-            <img src="../photos/pathgrass.jpg" />
+        <a href="../photos/grasspath.jpg">
+            <img src="../photos/grasspath.jpg" />
         </a>
         <a href="../photos/oldman.jpg">
             <img src="../photos/oldman.jpg" />
@@ -45,7 +44,7 @@
         <a href="../photos/grass-6.jpg" >
             <img src="../photos/grass-6.jpg" />
         </a>
-   <a href="../photos/cover.jpg" >
+        <a href="../photos/cover.jpg" >
             <img src="../photos/cover.jpg" />
         </a>
         <a href="../photos/IMG_9938.jpg">
@@ -60,8 +59,6 @@
         <a href="../photos/IMG_0569.jpg">
             <img src="../photos/IMG_0569.jpg" />
         </a>
-
-     
         <a href="../photos/IMG_6263.jpg">
             <img src="../photos/IMG_6263.jpg" />
         </a>
