--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -29,7 +29,7 @@
   </head>
 <body ontouchstart="">
 
-<!-- <nav id="drawer">
+<nav id="drawer">
   <ul>
     <li><div>Pre-wedding</div></li>
     <li><div>Portrait</div></li>
@@ -83,7 +83,7 @@
     <div id="banner" class="col-12 banner-not-mainpage">   
     </div>
 
-  <div id="below-banner"> -->
+  <div id="below-banner">
       <div class="swipeboxEx">
       
         <a href="photos/bikeboys.jpg" >
@@ -140,7 +140,7 @@
 
 
 
- <!--  </div>
+  </div>
 </div>
 
 <div id="main-gray-layer"><div>
@@ -155,7 +155,7 @@
 
 
   
- -->
+
 
   
  <!-- 
