--- a/testtest/test.html
+++ b/testtest/test.html
@@ -23,7 +23,7 @@
         <a href="photos/bikepathsunset.jpg">
             <img src="photos/bikepathsunset.jpg" />
         </a>
-        <a href=".photos/girlinsakura.jpg" >
+        <a href="photos/girlinsakura.jpg" >
             <img src="photos/girlinsakura.jpg" />
         </a>
         <a href="photos/girlsakura.jpg">
