--- a/testtest/test.html
+++ b/testtest/test.html
@@ -2,15 +2,11 @@
 <html>
 
 <head>
-    <!-- bower:css -->
+  
   
     <link rel="stylesheet" href="css/swipebox.min.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
-    <!-- endbower -->
-    <style type="text/css">
-   
- 
-    </style>
+    
 </head>
 
 <body>
@@ -68,17 +64,18 @@
 
     </div>
     
-    <!-- bower:js -->
+
     <script src="js/jquery.js"></script>
   
     <script src="js/jquery.swipebox.min.js"></script>
     <script src="js/jquery.justifiedGallery.js"></script>
-    <!-- endbower -->
+  
     <script>
     $('.swipeboxEx').each(function(i, el) {
         $(el).justifiedGallery({
             rel: 'gal' + i
         }).on('jg.complete', function() {
+            console.log("complete");
             if (i == 0) $('.swipeboxEx a').swipebox(); //swipebox, wants to be called only once to work properly
         });
     });
