--- a/testtest/test.html
+++ b/testtest/test.html
@@ -13,55 +13,51 @@
    
     <div class="swipeboxEx">
       
-        <a href="photos/bikeboys.jpg" >
-            <img src="photos/bikeboys.jpg" />
+         <a href="photos/pre-wedding/1.jpg" >
+            <img src="photos/pre-wedding/1.jpg" />
         </a>
-        <a href="photos/bikepathsunset.jpg">
-            <img src="photos/bikepathsunset.jpg" />
+        <a href="photos/pre-wedding/2.jpg">
+            <img src="photos/pre-wedding/2.jpg" />
         </a>
-        <a href="photos/girlinsakura.jpg" >
-            <img src="photos/girlinsakura.jpg" />
+        <a href="photos/pre-wedding/3.jpg" >
+            <img src="photos/pre-wedding/3.jpg" />
         </a>
-        <a href="photos/girlsakura.jpg">
-            <img src="photos/girlsakura.jpg" />
+        <a href="photos/pre-wedding/4.jpg">
+            <img src="photos/pre-wedding/4.jpg" />
         </a>
-        <a href="photos/grandma.jpg">
-            <img src="photos/grandma.jpg" />
+        <a href="photos/pre-wedding/5.jpg">
+            <img src="photos/pre-wedding/5.jpg" />
         </a>
-        <a href="photos/grasspath.jpg">
-            <img src="photos/grasspath.jpg" />
+        <a href="photos/pre-wedding/6.jpg">
+            <img src="photos/pre-wedding/6.jpg" />
         </a>
-        <a href="photos/oldman.jpg">
-            <img src="photos/oldman.jpg" />
+        <a href="photos/pre-wedding/7.jpg">
+            <img src="photos/pre-wedding/7.jpg" />
         </a>
-        <a href="photos/oneflw.jpg" >
-            <img src="photos/oneflw.jpg" />
+        <a href="photos/pre-wedding/8.jpg" >
+            <img src="photos/pre-wedding/8.jpg" />
         </a>
-        <a href="photos/grass-6.jpg" >
-            <img src="photos/grass-6.jpg" />
+        <a href="photos/pre-wedding/9.jpg" >
+            <img src="photos/pre-wedding/9.jpg" />
         </a>
-        <a href="photos/cover.jpg" >
-            <img src="photos/cover.jpg" />
+        <a href="photos/pre-wedding/10.jpg" >
+            <img src="photos/pre-wedding/10.jpg" />
         </a>
-        <a href="photos/IMG_9938.jpg">
-            <img src="photos/IMG_9938.jpg" />
+        <a href="photos/pre-wedding/11.jpg">
+            <img src="photos/pre-wedding/11.jpg" />
         </a>
-        <a href="photos/IMG_0425-6.jpg">
-            <img src="photos/IMG_0425-6.jpg" />
+        <a href="photos/pre-wedding/12.jpg">
+            <img src="photos/pre-wedding/12.jpg" />
         </a>
-        <a href="photos/boat.jpg" >
-            <img src="photos/boat.jpg" />
+        <a href="photos/pre-wedding/13.jpg" >
+            <img src="photos/pre-wedding/13.jpg" />
         </a>
-        <a href="photos/IMG_0569.jpg">
-            <img src="photos/IMG_0569.jpg" />
+        <a href="photos/pre-wedding/14.jpg">
+            <img src="photos/pre-wedding/14.jpg" />
         </a>
-        <a href="photos/IMG_6263.jpg">
-            <img src="photos/IMG_6263.jpg" />
+        <a href="photos/pre-wedding/15.jpg">
+            <img src="photos/pre-wedding/15.jpg" />
         </a>
-        <a href="photos/opposite.jpg">
-            <img src="photos/opposite.jpg" />
-        </a>
-
     </div>
     
 
