--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <header >
 
 <div class=" col-girl">
-<img class="girl_img" src="img/girl_head.svg">
+<!-- <img class="girl_img" src="img/girl_head.svg"> -->
 </div>
 
 
