--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -45,8 +45,8 @@
 <header >
 
 <div class=" col-girl">
-<img class="girl_img" src="img/girl_head.svg">
-</div>
+<!-- <img class="girl_img" src="img/girl_head.svg">
+ --></div>
 
 
 <div class=" col-btn">
