--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -163,7 +163,7 @@
   
   <script src="js/jquery.js"></script>
   <script src="js/test.js"></script>
-  <script src="js/jquery.swipebox.min.js"></script>
+  <script src="js/jquery.swipebox.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
 
  
