--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -84,7 +84,7 @@
     </div>
 
   <div id="below-banner">
-      <div class="swipeboxEx">
+      <div class="swipeboxEx justified-gallery">
       <a href="photos/pre-wedding/1.jpg" >
             <img src="photos/pre-wedding/1.jpg" />
         </a>
