--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -85,49 +85,49 @@
 
   <div id="below-banner">
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/pre-wedding/1.jpg" >
+      <a href="photos/pre-wedding/1_o.jpg" >
             <img src="photos/pre-wedding/1.jpg" />
         </a>
-        <a href="photos/pre-wedding/2.jpg">
+        <a href="photos/pre-wedding/2_o.jpg">
             <img src="photos/pre-wedding/2.jpg" />
         </a>
-        <a href="photos/pre-wedding/3.jpg" >
+        <a href="photos/pre-wedding/3_o.jpg" >
             <img src="photos/pre-wedding/3.jpg" />
         </a>
-        <a href="photos/pre-wedding/4.jpg">
+        <a href="photos/pre-wedding/4_o.jpg">
             <img src="photos/pre-wedding/4.jpg" />
         </a>
-        <a href="photos/pre-wedding/5.jpg">
+        <a href="photos/pre-wedding/5_o.jpg">
             <img src="photos/pre-wedding/5.jpg" />
         </a>
-        <a href="photos/pre-wedding/6.jpg">
+        <a href="photos/pre-wedding/6_o.jpg">
             <img src="photos/pre-wedding/6.jpg" />
         </a>
-        <a href="photos/pre-wedding/7.jpg">
+        <a href="photos/pre-wedding/7_o.jpg">
             <img src="photos/pre-wedding/7.jpg" />
         </a>
-        <a href="photos/pre-wedding/8.jpg" >
+        <a href="photos/pre-wedding/8_o.jpg" >
             <img src="photos/pre-wedding/8.jpg" />
         </a>
-        <a href="photos/pre-wedding/9.jpg" >
+        <a href="photos/pre-wedding/9_o.jpg" >
             <img src="photos/pre-wedding/9.jpg" />
         </a>
-        <a href="photos/pre-wedding/10.jpg" >
+        <a href="photos/pre-wedding/10_o.jpg" >
             <img src="photos/pre-wedding/10.jpg" />
         </a>
-        <a href="photos/pre-wedding/11.jpg">
+        <a href="photos/pre-wedding/11_o.jpg">
             <img src="photos/pre-wedding/11.jpg" />
         </a>
-        <a href="photos/pre-wedding/12.jpg">
+        <a href="photos/pre-wedding/12_o.jpg">
             <img src="photos/pre-wedding/12.jpg" />
         </a>
-        <a href="photos/pre-wedding/13.jpg" >
+        <a href="photos/pre-wedding/13_o.jpg" >
             <img src="photos/pre-wedding/13.jpg" />
         </a>
-        <a href="photos/pre-wedding/14.jpg">
+        <a href="photos/pre-wedding/14_o.jpg">
             <img src="photos/pre-wedding/14.jpg" />
         </a>
-        <a href="photos/pre-wedding/15.jpg">
+        <a href="photos/pre-wedding/15_o.jpg">
             <img src="photos/pre-wedding/15.jpg" />
         </a>
 
