--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -45,8 +45,10 @@
 <header >
 
 <div class=" col-girl">
-<!-- <img class="girl_img" src="img/girl_head.svg">
- --></div>
+<a href="index.html">
+<img class="girl_img" src="img/homepageicon.svg">
+</a>
+</div>
 
 
 <div class=" col-btn">
