--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 <header >
 
 <div class=" col-girl">
-<!-- <img class="girl_img" src="img/girl_head.svg"> -->
+<a href="index.html">
+<img class="girl_img" src="img/homepageicon.svg">
+</a>
 </div>
 
 
