--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
 <nav id="drawer">
   <ul>
-    <li><div><a href="pre-wedding.html">Pre-wedding</a></div></li>
+    <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
-    <li><div><a href="index.html/#me">Me</a></div></li>
+    <a href="#me"><li><div>Me</div></li></a>
 
   </ul>
 </nav>
