--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -31,11 +31,11 @@
 
 <nav id="drawer">
   <ul>
-    <li><div>Pre-wedding</div></li>
+    <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
-    <li><div><a href="#me">Me</a></div></li>
+    <a href="#me"><li><div>Me</div></li></a>
 
   </ul>
 </nav>
