--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -88,7 +88,8 @@
 
     
     <div id="banner-textbox">
-      <div id="banner-text">Pre-wedding</h3>
+      <div id="banner-text">
+      <h3 class="myname">Pre-wedding</h3>
       </div>
     </div>
         
