--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <nav id="drawer">
   <ul>
-    <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
+    <a class="selectedpage" href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
