--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -31,7 +31,7 @@
 
 <nav id="drawer">
   <ul>
-    <a class="selectedpage" href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
+    <a href="pre-wedding.html"><li class="selectedpage" ><div>Pre-wedding</div></li></a>
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
