--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -182,7 +182,7 @@
   
   
   <script src="js/jquery.js"></script>
-  <script src="js/test.js"></script>
+  <script src="js/js.js"></script>
   <script src="js/jquery.swipebox.js"></script>
   <script src="js/jquery.justifiedGallery.js"></script>
 
