--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -35,7 +35,7 @@
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
-    <a href="#me"><li><div>Me</div></li></a>
+    <a href="index.html/#me"><li><div>Me</div></li></a>
 
   </ul>
 </nav>
