--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <li class="horizontal"><div>Portrait</div></li>
     <li class="horizontal"><div>Travel</div></li>
     <li class="horizontal"><div>Life</div></li>
-    <li class="horizontal"><div><a href="index.html/#me">Me</a></div></li>
+    <li class="horizontal"><div><a href="#me">Me</a></div></li>
   </ul>
 </div>
 
