--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -35,7 +35,7 @@
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
-    <a href="index.html/#me"><li><div>Me</div></li></a>
+    <a href="https://yaohermione.github.io/#me"><li><div>Me</div></li></a>
 
   </ul>
 </nav>
@@ -71,7 +71,7 @@
     <li class="horizontal"><div>Portrait</div></li>
     <li class="horizontal"><div>Travel</div></li>
     <li class="horizontal"><div>Life</div></li>
-    <li class="horizontal"><div><a href="index.html/#me">Me</a></div></li>
+    <li class="horizontal"><div><a href="https://yaohermione.github.io/#me">Me</a></div></li>
   </ul>
 </div>
 
