--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><div>Portrait</div></li>
     <li><div>Travel</div></li>
     <li><div>Life</div></li>
-    <li onlick="gotome()"><div>Me</div></li>
+    <li onclick="gotome()"><div>Me</div></li>
 
   </ul>
 </nav>
