--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
 
 
   <div class="col-12 gallery">
-    <div class="gallery-image" id="pre-wedding-img">
-      
-    </div>
+    <a href="pre-wedding.html">
+      <div class="gallery-image" id="pre-wedding-img">
+        
+      </div>
+    </a>
     <div>
     <h6 class="gallery-text">Pre-wedding</h6>
     </div>
