--- a/index.html
+++ b/index.html
@@ -105,14 +105,17 @@
 
 
   <div class="col-12 gallery">
+
     <a href="pre-wedding.html">
       <div class="gallery-image" id="pre-wedding-img">
-        
+        <div class="darker"></div>
       </div>
     </a>
+
     <div>
     <h6 class="gallery-text">Pre-wedding</h6>
     </div>
+
   </div>
 
 
