--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -17,7 +17,7 @@
  -->
     <link rel="stylesheet" href="css/swipebox.min.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
-    <link rel="stylesheet" href="css/loading.css">
+    <!-- <link rel="stylesheet" href="css/loading.css"> -->
 
 
     <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
