--- a/portrait.html
+++ b/portrait.html
@@ -31,8 +31,8 @@
 
 <nav id="drawer">
   <ul>
-    <a href="pre-wedding.html"><li class="selectedpage" ><div>Pre-wedding</div></li></a>
-    <a href="pre-portrait.html"><li><div>Portrait</div></li></a>
+    <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
+    <a href="portrait.html"><li class="selectedpage" ><div>Portrait</div></li></a>
     <a href="travel.html"><li><div>Travel</div></li></a>
     <a href="life.html"><li><div>Life</div></li></a>
     <li onclick="gotome()"><div>Me</div></li>
@@ -67,8 +67,8 @@
 
 <div class="h-menu">
    <ul>
-    <li class="horizontal"><a class="selectedpage" href="pre-wedding.html">Pre-wedding</a></li>
-    <li class="horizontal"><a href="portrait.html">Portrait</a></li>
+    <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
+    <li class="horizontal"><a class="selectedpage" href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a href="travel.html">Travel</a></li>
     <li class="horizontal"><a href="life.html">Life</a></li>
     <li class="horizontal"><div><a href="https://yaohermione.github.io/#me">Me</a></div></li>
@@ -105,50 +105,50 @@
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/pre-wedding/1_o.jpg" >
-            <img src="photos/pre-wedding/1.jpg" />
+      <a href="photos/portrait/1_o.jpg" >
+            <img src="photos/portrait/1.jpg" />
         </a>
-        <a href="photos/pre-wedding/2_o.jpg">
-            <img src="photos/pre-wedding/2.jpg" />
+        <a href="photos/portrait/2_o.jpg">
+            <img src="photos/portrait/2.jpg" />
         </a>
-        <a href="photos/pre-wedding/3_o.jpg" >
-            <img src="photos/pre-wedding/3.jpg" />
+        <a href="photos/portrait/3_o.jpg" >
+            <img src="photos/portrait/3.jpg" />
         </a>
-        <a href="photos/pre-wedding/4_o.jpg">
-            <img src="photos/pre-wedding/4.jpg" />
+        <a href="photos/portrait/4_o.jpg">
+            <img src="photos/portrait/4.jpg" />
         </a>
-        <a href="photos/pre-wedding/5_o.jpg">
-            <img src="photos/pre-wedding/5.jpg" />
+        <a href="photos/portrait/5_o.jpg">
+            <img src="photos/portrait/5.jpg" />
         </a>
-        <a href="photos/pre-wedding/6_o.jpg">
-            <img src="photos/pre-wedding/6.jpg" />
+        <a href="photos/portrait/6_o.jpg">
+            <img src="photos/portrait/6.jpg" />
         </a>
-        <a href="photos/pre-wedding/7_o.jpg">
-            <img src="photos/pre-wedding/7.jpg" />
+        <a href="photos/portrait/7_o.jpg">
+            <img src="photos/portrait/7.jpg" />
         </a>
-        <a href="photos/pre-wedding/8_o.jpg" >
-            <img src="photos/pre-wedding/8.jpg" />
+        <a href="photos/portrait/8_o.jpg" >
+            <img src="photos/portrait/8.jpg" />
         </a>
-        <a href="photos/pre-wedding/9_o.jpg" >
-            <img src="photos/pre-wedding/9.jpg" />
+        <a href="photos/portrait/9_o.jpg" >
+            <img src="photos/portrait/9.jpg" />
         </a>
-        <a href="photos/pre-wedding/10_o.jpg" >
-            <img src="photos/pre-wedding/10.jpg" />
+        <a href="photos/portrait/10_o.jpg" >
+            <img src="photos/portrait/10.jpg" />
         </a>
-        <a href="photos/pre-wedding/11_o.jpg">
-            <img src="photos/pre-wedding/11.jpg" />
+        <a href="photos/portrait/11_o.jpg">
+            <img src="photos/portrait/11.jpg" />
         </a>
-        <a href="photos/pre-wedding/12_o.jpg">
-            <img src="photos/pre-wedding/12.jpg" />
+        <a href="photos/portrait/12_o.jpg">
+            <img src="photos/portrait/12.jpg" />
         </a>
-        <a href="photos/pre-wedding/13_o.jpg" >
-            <img src="photos/pre-wedding/13.jpg" />
+        <a href="photos/portrait/13_o.jpg" >
+            <img src="photos/portrait/13.jpg" />
         </a>
-        <a href="photos/pre-wedding/14_o.jpg">
-            <img src="photos/pre-wedding/14.jpg" />
+        <a href="photos/portrait/14_o.jpg">
+            <img src="photos/portrait/14.jpg" />
         </a>
-        <a href="photos/pre-wedding/15_o.jpg">
-            <img src="photos/pre-wedding/15.jpg" />
+        <a href="photos/portrait/15_o.jpg">
+            <img src="photos/portrait/15.jpg" />
         </a>
 
       </div>
