--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 <nav id="drawer">
   <ul>
-    <a class="selectedpage" href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
-    <li><div>Portrait</div></li>
-    <li><div>Travel</div></li>
-    <li><div>Life</div></li>
+    <a href="pre-wedding.html"><li><div>Pre-wedding</div></li></a>
+    <a href="portrait.html"><li><div>Portrait</div></li></a>
+    <a href="travel.html"><li><div>Travel</div></li></a>
+    <a href="life.html"><li><div>Life</div></li></a>
     <li onclick="gotome()"><div>Me</div></li>
 
   </ul>
@@ -65,9 +65,9 @@
 <div class="h-menu">
    <ul>
     <li class="horizontal"><a href="pre-wedding.html">Pre-wedding</a></li>
-    <li class="horizontal"><div>Portrait</div></li>
-    <li class="horizontal"><div>Travel</div></li>
-    <li class="horizontal"><div>Life</div></li>
+    <li class="horizontal"><a href="portrait.html">Portrait</a></li>
+    <li class="horizontal"><a href="travel.html">Travel</a></li>
+    <li class="horizontal"><a href="life.html">Life</a></li>
     <li class="horizontal"><div><a href="#me">Me</a></div></li>
   </ul>
 </div>
@@ -120,9 +120,13 @@
 
 
   <div class="col-12 gallery gallery-right">
+
+    <a href="portrait.html">
     <div class="gallery-image" id="portrait-img">
       <div class="darker"></div>
     </div>
+    </a>
+
     <div>
     <h6 class="gallery-text">Portrait</h6>
     </div>
@@ -130,9 +134,13 @@
 
 
   <div class="col-12 gallery">
-    <div class="gallery-image" id="travel-img">
-      <div class="darker"></div>
-    </div>
+
+    <a href="travel.html">
+      <div class="gallery-image" id="travel-img">
+        <div class="darker"></div>
+      </div>
+    </a>
+
     <div>
     <h6 class="gallery-text">Travel</h6>
     </div>
@@ -140,9 +148,13 @@
 
 
   <div class="col-12 gallery gallery-right">
+    
+  <a href="life.html">
     <div class="gallery-image" id="life-img">
       <div class="darker"></div>
     </div>
+  </a>
+
     <div>
     <h6 class="gallery-text">Life</h6>
     </div>
