--- a/life.html
+++ b/life.html
@@ -99,56 +99,56 @@
   <div id="below-banner">
 
 <div class="col-12">
-  <h4 class="gallary-title">Pre-wedding</h4>
+  <h4 class="gallary-title">Life</h4>
 </div>
 
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/portrait/1_o.jpg" >
-            <img src="photos/portrait/1.jpg" />
+      <a href="photos/life/1_o.jpg" >
+            <img src="photos/life/1.jpg" />
         </a>
-        <a href="photos/portrait/2_o.jpg">
-            <img src="photos/portrait/2.jpg" />
+        <a href="photos/life/2_o.jpg">
+            <img src="photos/life/2.jpg" />
         </a>
-        <a href="photos/portrait/3_o.jpg" >
-            <img src="photos/portrait/3.jpg" />
+        <a href="photos/life/3_o.jpg" >
+            <img src="photos/life/3.jpg" />
         </a>
-        <a href="photos/portrait/4_o.jpg">
-            <img src="photos/portrait/4.jpg" />
+        <a href="photos/life/4_o.jpg">
+            <img src="photos/life/4.jpg" />
         </a>
-        <a href="photos/portrait/5_o.jpg">
-            <img src="photos/portrait/5.jpg" />
+        <a href="photos/life/5_o.jpg">
+            <img src="photos/life/5.jpg" />
         </a>
-        <a href="photos/portrait/6_o.jpg">
-            <img src="photos/portrait/6.jpg" />
+        <a href="photos/life/6_o.jpg">
+            <img src="photos/life/6.jpg" />
         </a>
-        <a href="photos/portrait/7_o.jpg">
-            <img src="photos/portrait/7.jpg" />
+        <a href="photos/life/7_o.jpg">
+            <img src="photos/life/7.jpg" />
         </a>
-        <a href="photos/portrait/8_o.jpg" >
-            <img src="photos/portrait/8.jpg" />
+        <a href="photos/life/8_o.jpg" >
+            <img src="photos/life/8.jpg" />
         </a>
-        <a href="photos/portrait/9_o.jpg" >
-            <img src="photos/portrait/9.jpg" />
+        <a href="photos/life/9_o.jpg" >
+            <img src="photos/life/9.jpg" />
         </a>
-        <a href="photos/portrait/10_o.jpg" >
-            <img src="photos/portrait/10.jpg" />
+        <a href="photos/life/10_o.jpg" >
+            <img src="photos/life/10.jpg" />
         </a>
-        <a href="photos/portrait/11_o.jpg">
-            <img src="photos/portrait/11.jpg" />
+        <a href="photos/life/11_o.jpg">
+            <img src="photos/life/11.jpg" />
         </a>
-        <a href="photos/portrait/12_o.jpg">
-            <img src="photos/portrait/12.jpg" />
+        <a href="photos/life/12_o.jpg">
+            <img src="photos/life/12.jpg" />
         </a>
-        <a href="photos/portrait/13_o.jpg" >
-            <img src="photos/portrait/13.jpg" />
+        <a href="photos/life/13_o.jpg" >
+            <img src="photos/life/13.jpg" />
         </a>
-        <a href="photos/portrait/14_o.jpg">
-            <img src="photos/portrait/14.jpg" />
+        <a href="photos/life/14_o.jpg">
+            <img src="photos/life/14.jpg" />
         </a>
-        <a href="photos/portrait/15_o.jpg">
-            <img src="photos/portrait/15.jpg" />
+        <a href="photos/life/15_o.jpg">
+            <img src="photos/life/15.jpg" />
         </a>
 
       </div>
