--- a/portrait.html
+++ b/portrait.html
@@ -99,7 +99,7 @@
   <div id="below-banner">
 
 <div class="col-12">
-  <h4 class="gallary-title">Pre-wedding</h4>
+  <h4 class="gallary-title">Portrait</h4>
 </div>
 
 
