--- a/travel.html
+++ b/travel.html
@@ -99,56 +99,56 @@
   <div id="below-banner">
 
 <div class="col-12">
-  <h4 class="gallary-title">Pre-wedding</h4>
+  <h4 class="gallary-title">Travel</h4>
 </div>
 
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/portrait/1_o.jpg" >
-            <img src="photos/portrait/1.jpg" />
+      <a href="photos/travel/1_o.jpg" >
+            <img src="photos/travel/1.jpg" />
         </a>
-        <a href="photos/portrait/2_o.jpg">
-            <img src="photos/portrait/2.jpg" />
+        <a href="photos/travel/2_o.jpg">
+            <img src="photos/travel/2.jpg" />
         </a>
-        <a href="photos/portrait/3_o.jpg" >
-            <img src="photos/portrait/3.jpg" />
+        <a href="photos/travel/3_o.jpg" >
+            <img src="photos/travel/3.jpg" />
         </a>
-        <a href="photos/portrait/4_o.jpg">
-            <img src="photos/portrait/4.jpg" />
+        <a href="photos/travel/4_o.jpg">
+            <img src="photos/travel/4.jpg" />
         </a>
-        <a href="photos/portrait/5_o.jpg">
-            <img src="photos/portrait/5.jpg" />
+        <a href="photos/travel/5_o.jpg">
+            <img src="photos/travel/5.jpg" />
         </a>
-        <a href="photos/portrait/6_o.jpg">
-            <img src="photos/portrait/6.jpg" />
+        <a href="photos/travel/6_o.jpg">
+            <img src="photos/travel/6.jpg" />
         </a>
-        <a href="photos/portrait/7_o.jpg">
-            <img src="photos/portrait/7.jpg" />
+        <a href="photos/travel/7_o.jpg">
+            <img src="photos/travel/7.jpg" />
         </a>
-        <a href="photos/portrait/8_o.jpg" >
-            <img src="photos/portrait/8.jpg" />
+        <a href="photos/travel/8_o.jpg" >
+            <img src="photos/travel/8.jpg" />
         </a>
-        <a href="photos/portrait/9_o.jpg" >
-            <img src="photos/portrait/9.jpg" />
+        <a href="photos/travel/9_o.jpg" >
+            <img src="photos/travel/9.jpg" />
         </a>
-        <a href="photos/portrait/10_o.jpg" >
-            <img src="photos/portrait/10.jpg" />
+        <a href="photos/travel/10_o.jpg" >
+            <img src="photos/travel/10.jpg" />
         </a>
-        <a href="photos/portrait/11_o.jpg">
-            <img src="photos/portrait/11.jpg" />
+        <a href="photos/travel/11_o.jpg">
+            <img src="photos/travel/11.jpg" />
         </a>
-        <a href="photos/portrait/12_o.jpg">
-            <img src="photos/portrait/12.jpg" />
+        <a href="photos/travel/12_o.jpg">
+            <img src="photos/travel/12.jpg" />
         </a>
-        <a href="photos/portrait/13_o.jpg" >
-            <img src="photos/portrait/13.jpg" />
+        <a href="photos/travel/13_o.jpg" >
+            <img src="photos/travel/13.jpg" />
         </a>
-        <a href="photos/portrait/14_o.jpg">
-            <img src="photos/portrait/14.jpg" />
+        <a href="photos/travel/14_o.jpg">
+            <img src="photos/travel/14.jpg" />
         </a>
-        <a href="photos/portrait/15_o.jpg">
-            <img src="photos/portrait/15.jpg" />
+        <a href="photos/travel/15_o.jpg">
+            <img src="photos/travel/15.jpg" />
         </a>
 
       </div>
