--- a/pre-wedding.html
+++ b/pre-wedding.html
@@ -32,7 +32,7 @@
 <nav id="drawer">
   <ul>
     <a href="pre-wedding.html"><li class="selectedpage" ><div>Pre-wedding</div></li></a>
-    <a href="pre-portrait.html"><li><div>Portrait</div></li></a>
+    <a href="portrait.html"><li><div>Portrait</div></li></a>
     <a href="travel.html"><li><div>Travel</div></li></a>
     <a href="life.html"><li><div>Life</div></li></a>
     <li onclick="gotome()"><div>Me</div></li>
