--- a/life.html
+++ b/life.html
@@ -84,7 +84,7 @@
 
     <div id="banner" class="col-12">
     
-    <img src="img/pre-wedding-banner.jpg" id="banner_img">
+    <img src="img/life-banner.jpg" id="banner_img">
 
    <!--  
     <div id="banner-textbox">
