--- a/life.html
+++ b/life.html
@@ -105,50 +105,50 @@
 
 
       <div class="swipeboxEx justified-gallery">
-      <a href="photos/life/1_o.jpg" >
-            <img src="photos/life/1.jpg" />
+      <a href="photos/life/1.jpg" >
+            <img src="photos/life/1-1000.jpg" />
         </a>
-        <a href="photos/life/2_o.jpg">
-            <img src="photos/life/2.jpg" />
+        <a href="photos/life/2.jpg">
+            <img src="photos/life/2-1000.jpg" />
         </a>
-        <a href="photos/life/3_o.jpg" >
-            <img src="photos/life/3.jpg" />
+        <a href="photos/life/3.jpg" >
+            <img src="photos/life/3-1000.jpg" />
         </a>
-        <a href="photos/life/4_o.jpg">
-            <img src="photos/life/4.jpg" />
+        <a href="photos/life/4.jpg">
+            <img src="photos/life/4-1000.jpg" />
         </a>
-        <a href="photos/life/5_o.jpg">
-            <img src="photos/life/5.jpg" />
+        <a href="photos/life/5.jpg">
+            <img src="photos/life/5-1000.jpg" />
         </a>
-        <a href="photos/life/6_o.jpg">
-            <img src="photos/life/6.jpg" />
+        <a href="photos/life/6.jpg">
+            <img src="photos/life/6-1000.jpg" />
         </a>
-        <a href="photos/life/7_o.jpg">
-            <img src="photos/life/7.jpg" />
+        <a href="photos/life/7.jpg">
+            <img src="photos/life/7-1000.jpg" />
         </a>
-        <a href="photos/life/8_o.jpg" >
-            <img src="photos/life/8.jpg" />
+        <a href="photos/life/8.jpg" >
+            <img src="photos/life/8-1000.jpg" />
         </a>
-        <a href="photos/life/9_o.jpg" >
-            <img src="photos/life/9.jpg" />
+        <a href="photos/life/9.jpg" >
+            <img src="photos/life/9-1000.jpg" />
         </a>
-        <a href="photos/life/10_o.jpg" >
-            <img src="photos/life/10.jpg" />
+        <a href="photos/life/10.jpg" >
+            <img src="photos/life/10-1000.jpg" />
         </a>
-        <a href="photos/life/11_o.jpg">
-            <img src="photos/life/11.jpg" />
+        <a href="photos/life/11.jpg">
+            <img src="photos/life/11-1000.jpg" />
         </a>
-        <a href="photos/life/12_o.jpg">
-            <img src="photos/life/12.jpg" />
+        <a href="photos/life/12.jpg">
+            <img src="photos/life/12-1000.jpg" />
         </a>
-        <a href="photos/life/13_o.jpg" >
-            <img src="photos/life/13.jpg" />
+        <a href="photos/life/13.jpg" >
+            <img src="photos/life/13-1000.jpg" />
         </a>
-        <a href="photos/life/14_o.jpg">
-            <img src="photos/life/14.jpg" />
+        <a href="photos/life/14.jpg">
+            <img src="photos/life/14-1000.jpg" />
         </a>
-        <a href="photos/life/15_o.jpg">
-            <img src="photos/life/15.jpg" />
+        <a href="photos/life/15.jpg">
+            <img src="photos/life/15-1000.jpg" />
         </a>
 
       </div>
