--- a/life.html
+++ b/life.html
@@ -84,14 +84,14 @@
 
     <div id="banner" class="col-12">
     
-    <img src="img/life-banner.jpg" id="banner_img">
 
-   <!--  
-    <div id="banner-textbox">
-      <div id="banner-text">
-      <h3 class="myname">Pre-wedding</h3>
-      </div>
-    </div> -->
+
+    <picture>
+    <source media="(min-width: 1000px)"
+    srcset="img/life-banner-flat.jpg"/>
+    <img src="img/life-banner.jpg" id="banner_img">
+    </picture>
+  
         
    
     </div>
