--- a/life.html
+++ b/life.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Yao WEI Photography</title>
 
-  
+  <script src="js/polyfill.min.js"></script>
+
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/css.css">
     <!-- <link rel="stylesheet" href="css/style.css">
