--- a/life.html
+++ b/life.html
@@ -6,7 +6,9 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Yao WEI Photography</title>
-
+  <script>
+    document.createElement("picture");
+  </script>
   <script src="js/polyfill.min.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>
@@ -88,7 +90,7 @@
 
 
     <picture>
-    <source media="(min-width: 1000px)"
+    <source media="(min-width: 800px)"
     srcset="img/life-banner-flat.jpg"/>
     <img src="img/life-banner.jpg" id="banner_img">
     </picture>
