--- a/life.html
+++ b/life.html
@@ -90,8 +90,9 @@
 
 
     <picture>
-    <source media="(min-width: 800px)"
-    srcset="img/life-banner-flat.jpg"/>
+    <source media="(min-device-width: 1200px)"
+    srcset="img/life-banner-flat.jpg" 
+    />
     <img src="img/life-banner.jpg" id="banner_img">
     </picture>
   
